--- a/tasks/manage_content_views.yml
+++ b/tasks/manage_content_views.yml
@@ -86,7 +86,7 @@
   tags:
     - "publish_content_view"
 
-- name: "Lifecycle environments"
+- name: "Promote content view to lifecycle environments"
   block:
     - name: "Obtain lifecycle environments"
       uri:
@@ -176,4 +176,58 @@
   tags:
     - "promote_cv_to_lifecycle"
   when:
-    - "cv.promote_to | default('[]') | length > 0"
+    - "cv.promote_to | default([]) | length > 0"
+
+- name: "Remove content view versions"
+  block:
+    - name: "Set previous content view version ID"
+      set_fact:
+        content_view_prev_version_id: "{{ cv_vers_sorted[1] }}"
+      vars:
+        cv_vers_sorted: "{{ cv_vers | sort(reverse=True) }}"
+
+    - debug:
+        var: "content_view_prev_version_id"
+        verbosity: "1"
+
+    - name: "Initiate removal of previous {{ cv.name }} content view version (id: {{ content_view_prev_version_id }})"
+      uri:
+        method: "DELETE"
+        status_code: "200,202"
+        body: "{\"id\": \"{{ content_view_prev_version_id }}\"}"
+      vars:
+        sat6_url_path: "katello/api/content_view_versions/{{ content_view_prev_version_id }}"
+      register: "cv_prev_ver_delete"
+
+    - name: "Check status of previous {{ cv.name }} content view version (id: {{ content_view_prev_version_id }})  removal"
+      uri:
+        body: "{\"id\": \"{{ cv_prev_ver_delete.json.id }}\"}"
+      register: "cv_delete_qry"
+      vars:
+        sat6_url_path: "foreman_tasks/api/tasks/{{ cv_prev_ver_delete.json.id }}"
+      until:
+        - "cv_delete_qry.json.state == 'stopped'"
+        - "not cv_delete_qry.json.pending | bool"
+        - "cv_delete_qry.json.progress | string == '1.0'"
+        - "cv_delete_qry.json.result == 'success'"
+      changed_when: "cv_promote_qry.json.result == 'success'"
+      failed_when:
+        - "cv_delete_qry.json.state == 'paused'"
+        - "cv_delete_qry.json.result == 'error'"
+      retries: "120"
+      delay: "30"
+
+    - debug:
+        var: "cv_delete_qry.json"
+        verbosity: "1"
+  when:
+    - "cv.promote_remove_previous_version | default(False)"
+    - "cv.promote_to | default([]) | length > 0" #only delete when we promote
+    - "cv_promote_qry.json.state == 'stopped'"
+    - "not cv_promote_qry.json.pending | bool"
+    - "cv_promote_qry.json.progress | string == '1.0'"
+    - "cv_promote_qry.json.result == 'success'"
+    - "cv_vers | length > 1" #make sure we have more than 1 version
+  vars:
+    cv_id_jq: "versions[*].id"
+    cv_vers: "{{ cv_ver_qry.json.results[0] | json_query(cv_id_jq) }}"
