--- a/tasks/manage_content_views.yml
+++ b/tasks/manage_content_views.yml
@@ -8,16 +8,8 @@
 
 - name: "Obtain content view ID"
   block:
-    - name: "Obtain content view ID"
-      uri:
-        body: "{\"search\": 'name=\"{{ cv.name }}\"', \"organization_id\": \"{{ organization_id }}\"}"
-      register: "cv_qry"
-      vars:
-        sat6_url_path: "katello/api/content_views"
-
-    - debug:
-        var: "cv_qry.json.results[0]"
-        verbosity: "1"
+    - name: "Obtain content views"
+      include_tasks: "get_content_views.yml"
 
     - name: "Set content view facts"
       set_fact:
@@ -42,164 +34,19 @@
 #     - 'cv.create_on_missing | default(False)'
 
 - name: "Publish new content view version"
-  block:
-    - name: "Initiate publishing new content view version of {{ cv.name }}"
-      uri:
-        method: "POST"
-        status_code: "202"
-        body: "{\"description\": \"{{ cv.publish_description | default('') }}\",
-                \"force_yum_metadata_regeneration\": \"{{ cv.publish_force_yum_metadata_regeneration | default(False) }}\"
-              }"
-      vars:
-        sat6_url_path: "katello/api/content_views/{{ content_view_id }}/publish"
-      register: "cv_publish"
-
-    - debug:
-        var: "cv_publish.json"
-        verbosity: "1"
-
-    - name: "Check {{ cv.name }} content view publish status"
-      uri:
-        body: "{\"id\": \"{{ cv_publish.json.id }}\"}"
-      register: "cv_publish_qry"
-      vars:
-        sat6_url_path: "foreman_tasks/api/tasks/{{ cv_publish.json.id }}"
-      until:
-        - "cv_publish_qry.json.state == 'stopped'"
-        - "not cv_publish_qry.json.pending | bool"
-        - "cv_publish_qry.json.progress | string == '1.0'"
-        - "cv_publish_qry.json.result == 'success'"
-      changed_when: "cv_publish_qry.json.result == 'success'"
-      failed_when:
-        - "cv_publish_qry.json.state == 'paused'"
-        - "cv_publish_qry.json.result == 'error'"
-      retries: "{{ sat6_max_task_retries }}"
-      delay: "{{ sat6_retry_delay }}"
-
-    - debug:
-        var: "cv_publish_qry.json"
-        verbosity: "1"
+  include_tasks: "publish_content_view.yml"
   when:
     - "cv.publish_new_version | default(False)"
     - "not content_view_composite"
     - "content_view_id != ''"
 
 - name: "Promote content view to lifecycle environments"
-  block:
-    - name: "Obtain lifecycle environments"
-      uri:
-        body: "{\"per_page\": \"1000\"}"
-      register: "lifecycle_qry"
-      vars:
-        sat6_url_path: "katello/api/environments"
-
-    - debug:
-        var: "lifecycle_qry"
-        verbosity: "1"
-
-    - name: "Obtain content view facts"
-      block:
-        - name: "Set content view facts"
-          set_fact:
-            content_view_version_id: "{{ cv_qry.json.results[0] | json_query(cv_id_jq) | max }}"
-          vars:
-            cv_id_jq: "versions[*].id"
-
-        - name: "Set {{ cv.name }} latest version promotion list"
-          set_fact:
-            content_view_environment_ids: "{{ cv_qry.json.results[0] | json_query(cv_env_ids_jq) | flatten }}"
-          vars:
-            cv_env_ids_jq: "versions[?id==`{{ content_view_version_id }}`].environment_ids"
-
-        - debug:
-            var: "content_view_version_id"
-            verbosity: "1"
-
-        - name: "Clean Library from content_view_environment_ids"
-          set_fact:
-            content_view_environment_ids: "{{ content_view_environment_ids | difference([1]) }}"
-          when: "1 in content_view_environment_ids"
-
-        - debug:
-            var: "content_view_environment_ids"
-            verbosity: "1"
-
-    - name: "Set lifecycle environment id list"
-      set_fact:
-        lifecycle_ids: []
-        lifecycle_dicts: []
-
-    - name: "Build lifecycle environment id list"
-      include_tasks: "build_promotion_list.yml"
-      with_items: "{{ cv.promote_to }}"
-      loop_control:
-        loop_var: "lifecycle"
-        label: "{{ lifecycle }}"
-
-    - debug:
-        var: "lifecycle_ids | difference(content_view_environment_ids)"
-        verbosity: "1"
-
-    - debug:
-        var: "lifecycle_dicts"
-        verbosity: "1"
-
-    - name: "Promote content view to lifecycle environments"
-      include_tasks: "promote_to_lifecycle.yml"
-      when: "lifecycle_ids | difference(content_view_environment_ids) | length > 0"
-
-    - debug:
-        msg:
-          - "Not attempting to promote {{ cv.name }}."
-          - "The current content view version (id: {{ content_view_version_id }}) has already been promoted to {{ lifecycles }}."
-      when: "lifecycle_ids | difference(content_view_environment_ids) | length < 1"
-      vars:
-        lifecycles: "{{ cv.promote_to | join(', ') }}"
+  include_tasks: "promote_content_view.yml"
   when:
     - "cv.promote_to | default([]) | length > 0"
 
 - name: "Remove previous content view version"
-  block:
-    - name: "Set previous content view version ID"
-      set_fact:
-        content_view_prev_version_id: "{{ cv_vers_sorted[1] }}"
-      vars:
-        cv_vers_sorted: "{{ cv_vers | sort(reverse=True) }}"
-
-    - debug:
-        var: "content_view_prev_version_id"
-        verbosity: "1"
-
-    - name: "Initiate removal of previous {{ cv.name }} content view version (id: {{ content_view_prev_version_id }})"
-      uri:
-        method: "DELETE"
-        status_code: "200,202"
-        body: "{\"id\": \"{{ content_view_prev_version_id }}\"}"
-      vars:
-        sat6_url_path: "katello/api/content_view_versions/{{ content_view_prev_version_id }}"
-      register: "cv_prev_ver_delete"
-
-    - name: "Check status of previous {{ cv.name }} content view version (id: {{ content_view_prev_version_id }}) removal"
-      uri:
-        body: "{\"id\": \"{{ cv_prev_ver_delete.json.id }}\"}"
-      register: "cv_delete_qry"
-      vars:
-        sat6_url_path: "foreman_tasks/api/tasks/{{ cv_prev_ver_delete.json.id }}"
-      until:
-        - "cv_delete_qry.json.state == 'stopped'"
-        - "not cv_delete_qry.json.pending | bool"
-        - "cv_delete_qry.json.progress | string == '1.0'"
-        - "cv_delete_qry.json.result == 'success'"
-      changed_when: "cv_delete_qry.json.result == 'success'"
-      failed_when:
-        - "cv_delete_qry.json.state == 'paused'"
-        - "cv_delete_qry.json.result == 'error'"
-      retries: "{{ sat6_max_task_retries }}"
-      delay: "{{ sat6_retry_delay }}"
-
-    - debug:
-        var: "cv_delete_qry.json"
-        verbosity: "1"
+  include_tasks: "remove_prev_cv_ver.yml"
   when:
     - "cv.promote_remove_previous_version | default(False)"
     - "cv.promote_to | default([]) | length > 0" #only delete when we promote
