--- a/tasks/update_ccv_component_vers.yml
+++ b/tasks/update_ccv_component_vers.yml
@@ -42,6 +42,7 @@
   vars:
     sat6_url_path: "katello/api/content_views/{{ composite_content_view_id }}/content_view_components/{{ component_cv_ver_id }}"
   register: "ccv_component_update"
+  changed_when: "ccv_component_update.status == 200"
 
 - debug:
     var: "ccv_component_update"
