don't try and publish when autopublish is set on composite view

--- a/tasks/manage_content_views.yml
+++ b/tasks/manage_content_views.yml
@@ -59,6 +59,7 @@
     - "cv.publish_new_version | default(False)"
     - "content_view_composite"
     - "composite_content_view_id != ''"
+    - "not composite_auto_publish"
 
 - name: "Promote content view to lifecycle environments"
   include_tasks: "promote_content_view.yml"
