--- a/tasks/remove_prev_cv_ver.yml
+++ b/tasks/remove_prev_cv_ver.yml
@@ -41,3 +41,11 @@
 - debug:
     var: "cv_delete_qry.json"
     verbosity: "1"
+
+- name: "Set content view version removal statistics"
+  set_fact:
+    content_views_versions_removed: "{{ content_views_versions_removed | int + 1 }}"
+    content_views_versions_removed_names: "{{ content_views_versions_removed_names | union([cv_del_txt]) }}"
+  vars:
+    cv_del_txt: "{{ cv.name }} - id: {{ content_view_prev_version_id }}"
+  when: "cv_delete_qry.json.result == 'success'"
