--- a/meta/main.yml
+++ b/meta/main.yml
@@ -35,10 +35,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
+  platforms:
+  - name: "EL"
+    versions:
+    - "all"
   #   - 25
   # - name: SomePlatform
   #   versions:
@@ -54,7 +54,7 @@ galaxy_info:
     - "contentviews"
     - "compositecontentviews"
     - "redhat"
-    - "content" 
+    - "content"
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
