Fix bug when multiple same lifecycle_data exist, like Library. Adding comma in join

--- a/tasks/build_promotion_list.yml
+++ b/tasks/build_promotion_list.yml
@@ -10,7 +10,7 @@
 - name: "Set lifecycle ID"
   set_fact:
     lifecycle_id: "[{{ lifecycle_qry.json | json_query(lc_id_jq) | join('') }}]"
-    lifecycle_data: "[{{ lifecycle_qry.json | json_query(lc_data_jq) | join('') }}]"
+    lifecycle_data: "[{{ lifecycle_qry.json | json_query(lc_data_jq) | join(',') }}]"
   vars:
     lc_id_jq: "results[?name==`{{ lifecycle }}`].id"
     lc_data_jq: "results[?name==`{{ lifecycle }}`].{id: id, name: name}"
